force-app/main/default/objects/vlocity_cmt__SpecTemplateAttributeMapping__c/vlocity_cmt__SpecTemplateAttributeMapping__c.object-meta.xml
<CustomObject>
    <label>Spec Template Attribute Mapping</label>
    <nameField>
        <label>Spec Template Attribute Mapping</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spec Template Attribute Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>