force-app/main/default/objects/vlocity_cmt__SpecTemplateAttributeMapping__c/fields/vlocity_cmt__SpecTemplateAttributeId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__SpecTemplateAttributeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents a spec template atrribute imported from a technical, rating or billing engine catalog.</description>
    <inlineHelpText>Represents a spec template atrribute imported from a technical, rating or billing engine catalog.</inlineHelpText>
    <label>Spec Template Attribute</label>
    <referenceTo>vlocity_cmt__Attribute__c</referenceTo>
    <relationshipLabel>Spec Template Attribute Mappings (Spec Template Attribute)</relationshipLabel>
    <relationshipName>SpecTemplateAttributeMappings</relationshipName>
    <type>Lookup</type>
</CustomField>