force-app/main/default/objects/vlocity_cmt__SpecTemplateAttributeMapping__c/listViews/vlocity_cmt__All.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_cmt__SpecTemplateMappingId__c</columns>
    <columns>vlocity_cmt__MappedPricingVariableId__c</columns>
    <columns>vlocity_cmt__SpecTemplateAttributeId__c</columns>
    <columns>vlocity_cmt__MappedAttributeId__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>